--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.8.1/slick.css"/>
-    <link rel="stylesheet" href="carousel.css" />
+    <meta property="og:image" content={previewImageSrc}/>
+    <meta name="twitter:image" content={previewImageSrc}/>
     <style>
         body {
             font-family: Georgia, "Times New Roman", Times, serif;
