--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content={previewImageSrc}/>
-    <meta name="twitter:image" content={previewImageSrc}/>
+    <meta property="og:image" content="https://gazadonations.github.io/gazadonations.github.io/assets/CoverSocial-min.jpg"/>
+    <meta name="twitter:image" content="https://gazadonations.github.io/gazadonations.github.io/assets/CoverSocial-min.jpg"/>
+
     <style>
         body {
             font-family: Georgia, "Times New Roman", Times, serif;
