--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://gazadonations.github.io/CoverSocial-min.jpg"/>
+    <meta property="og:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
     <meta name="twitter:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
