--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
     <meta name="twitter:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -102,6 +102,29 @@
             margin-top: -10px;
             margin-bottom: -10px;
             text-align: center;
+        }
+
+        @media only screen and (max-width: 768px) {
+            /* Add styles for mobile devices here */
+            body {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 30px;
+            }
+
+            #paragraph {
+                max-width: 100%;
+            }
+
+            .image-container {
+                max-width: 100%;
+            }
+
+            .image-container img {
+                width: 100%;
+            }
         }
     </style>
 </head>
