--- a/index.html
+++ b/index.html
@@ -105,27 +105,28 @@
         }
 
         @media only screen and (max-width: 768px) {
-            /* Add styles for mobile devices here */
-            body {
-                padding: 15px;
-            }
-
-            h1 {
-                font-size: 30px;
-            }
-
-            #paragraph {
-                max-width: 100%;
-            }
-
-            .image-container {
-                max-width: 100%;
-            }
-
-            .image-container img {
-                width: 100%;
-            }
+        body {
+            padding: 15px;
         }
+
+        h1 {
+            font-size: 30px;
+        }
+
+        #paragraph {
+            max-width: 100%;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+
+        .image-container {
+            max-width: 100%;
+            margin: 10px 0;
+        }
+    }
     </style>
 </head>
 <body>
