--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
             text-align: center;
         }
 
-        <style>
-    /* Your existing styles here */
-
     @media only screen and (max-width: 768px) {
+        /* Add styles for mobile devices here */
         body {
             padding: 15px;
+            text-align: center;
         }
 
         h1 {
             font-size: 30px;
+            text-align: center;
         }
 
         #paragraph {
@@ -121,14 +121,14 @@
         }
 
         img {
-            width: 100%;
+            max-width: 100%;
             height: auto;
             margin: 0;
         }
 
         .image-container {
             max-width: 100%;
-            margin: 10px 0;
+            margin: 10px auto;
             text-align: center;
         }
 
@@ -139,7 +139,6 @@
     }
 </style>
 
-    }
     </style>
 </head>
 <body>
