--- a/index.html
+++ b/index.html
@@ -136,15 +136,39 @@
                 margin: 10px;
             }
 
-            .image-container {
+            #paragraph {
                 max-width: 100%;
-                margin: 10px auto;
-                text-align: center;
+                text-align: left;
+                margin: 0 auto;
+            }
+
+            #paragraph img {
+                max-width: 100%;
+                height: auto;
+                margin: 15px 0;
+            }
+
+            #paragraph p {
+                font-size: 20px;
+                margin-bottom: 15px;
+            }
+
+            .image-container {
+                max-width: 30%;
+                margin: 20px;
+                display: inline-block;
+                vertical-align: top;
             }
 
             .image-container img {
                 width: 100%;
                 height: auto;
+            }
+
+            .image-caption {
+                margin-top: -10px;
+                margin-bottom: -10px;
+                text-align: center;
             }
         }
 </style>
