--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
             }
 
             .image-container {
-                max-width: 30%;
+                max-width: 45%; 
                 margin: 20px;
                 display: inline-block;
                 vertical-align: top;
-                text-align: center; /* Center the content within each image-container */
+                text-align: center;
             }
 
             .image-container img {
@@ -170,9 +170,15 @@
                 margin-top: -10px;
                 margin-bottom: -10px;
                 text-align: center;
-                white-space: nowrap; 
+                white-space: nowrap;
                 overflow: hidden; 
-                text-overflow: ellipsis;
+                text-overflow: ellipsis; 
+            }
+
+            .image-container:nth-child(3) {
+                display: block;
+                margin: 20px auto;
+                max-width: 90%; 
             }
         }
 </style>
