--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
             #cover-image {
                 width: 100%;
-                max-height: 300px; /* Adjust the height as needed */
-                object-fit: cover; /* Ensure the image covers the container */
-                margin: 0 auto 20px; /* Center the image and add some bottom margin */
+                max-height: 300px;
+                object-fit: cover; 
+                margin: 0 auto 20px; 
             }
 
             #donations-section {
@@ -154,7 +154,7 @@
             }
 
             .image-container {
-                max-width: 45%; 
+                max-width: 25%; 
                 margin: 20px;
                 display: inline-block;
                 vertical-align: top;
