--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
             .image-container {
                 max-width: 45%; 
-                margin: 20px;
+                margin: 20px 10px;
                 display: inline-block;
                 vertical-align: top;
                 text-align: center;
