--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
             }
 
             #donations-section img {
-                max-width: 30%;
+                max-width: 40%;
                 height: auto;
                 margin: 10px;
+                display: inline-block;
             }
 
             #paragraph {
@@ -179,6 +180,13 @@
                 display: block;
                 margin: 20px auto;
                 max-width: 70%; 
+            }
+            
+            @media only screen and (max-width: 480px) {
+            #donations-section img {
+                width: 80%;
+                display: block;
+                margin: 10px auto;
             }
         }
 </style>
