--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
             text-align: center;
         }
 
+        #cover-section {
+            max-width: 100%;
+        }
+
+        #cover-image {
+            width: 100%;
+            max-height: 300px; 
+            object-fit: cover;
+            margin: 0 auto 20px; 
+        }
+
         #paragraph {
             max-width: 1130px;
             margin-top: 30px;
@@ -120,10 +131,8 @@
             }
 
             #cover-image {
-                width: 100%;
-                max-height: 300px;
-                object-fit: cover; 
-                margin: 0 auto 20px; 
+                max-width: none;
+                margin: 20px;  
             }
 
             #donations-section {
