--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             text-align: center;
         }
 
-        #cover-section {
+/*         #cover-section {
             max-width: 100%;
-        }
+        } */
 
         #cover-image {
             width: 100%;
@@ -126,9 +126,9 @@
                 text-align: center;
             }
 
-            #cover-section {
+/*             #cover-section {
                 max-width: 100%;
-            }
+            } */
 
             #cover-image {
                 max-width: none;
