--- a/index.html
+++ b/index.html
@@ -12,68 +12,122 @@
 
 
 
-    <style>
-        body {
-            font-family: Georgia, "Times New Roman", Times, serif;
-            line-height: 1.6;
-            word-break: break-word;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 24px;
-            padding: 30px;
-            box-sizing: border-box;
-            text-align: left;
-        }
+<style>
+    body {
+        font-family: Georgia, "Times New Roman", Times, serif;
+        line-height: 1.6;
+        word-break: break-word;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 24px;
+        padding: 15px; 
+        box-sizing: border-box;
+        text-align: center;
+    }
 
-        h1 {
-            font-family: 'Times New Roman', sans-serif;
-            font-size: 40px;
+    h1 {
+        font-family: 'Times New Roman', sans-serif;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    #cover-section {
+        max-width: 100%;
+    }
+
+    #cover-image {
+        width: 100%;
+        max-height: 300px; 
+        object-fit: contain; 
+        margin: 0 auto 20px; 
+    }
+
+    #paragraph {
+        max-width: 100%;
+        text-align: left;
+        margin: 0 auto;
+    }
+
+    #paragraph img {
+        max-width: 100%;
+        height: auto;
+        margin: 15px 0;
+    }
+
+    #paragraph p {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    .image-container {
+        max-width: 45%; 
+        margin: 20px 10px;
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+    }
+
+    .image-container img {
+        width: 100%;
+        height: auto;
+    }
+
+    .image-caption {
+        margin-top: -10px;
+        margin-bottom: -10px;
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden; 
+        text-overflow: ellipsis; 
+    }
+
+    .image-container:nth-child(3) {
+        display: block;
+        margin: 20px auto;
+        max-width: 70%; 
+    }
+
+    @media only screen and (max-width: 768px) {
+        body {
+            padding: 15px;
             text-align: center;
         }
 
-/*         #cover-section {
+        h1 {
+            font-size: 30px;
+            text-align: center;
+        }
+
+        #cover-section {
             max-width: 100%;
-        } */
+        }
 
         #cover-image {
-            width: 100%;
-            max-height: 300px; 
-            object-fit: cover;
-            margin: 0 auto 20px; 
+            max-width: none;
+            margin: 20px;  
+        }
+
+        #donations-section {
+            text-align: center;
+        }
+
+        #donations-section img {
+            max-width: 40%;
+            height: auto;
+            margin: 10px;
+            display: inline-block;
         }
 
         #paragraph {
-            max-width: 1130px;
-            margin-top: 30px;
+            max-width: 100%;
+            text-align: left;
             margin: 0 auto;
-        }
-
-        .about-us {
-            font-size: 28px;
-        }
-
-        .campaign-objective {
-            font-size: 28px;
-        }
-
-        .contributions {
-            font-size: 25px;
-            margin-top: 30px;
-        }
-
-        .spacer-contributions {
-            margin-top: 50px; 
-        }
-
-        .personal-statement {
-            font-size: 26px;
         }
 
         #paragraph img {
             max-width: 100%;
             height: auto;
-            width: 100%;
             margin: 15px 0;
         }
 
@@ -82,30 +136,16 @@
             margin-bottom: 15px;
         }
 
-        #paragraph ol {
-            list-style-position: outside;
-            padding-left: 0;
-        }
-
-        #paragraph li {
-            font-size: 20px;
-            margin-left: 30px;
-            margin-bottom: 15px;
-        }
-
-        #imageFormat {
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-        }
-
         .image-container {
-            max-width: 30%;
-            margin: 20px 0;
+            max-width: 45%; 
+            margin: 20px 10px;
+            display: inline-block;
+            vertical-align: top;
+            text-align: center;
         }
 
         .image-container img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
         }
 
@@ -113,85 +153,18 @@
             margin-top: -10px;
             margin-bottom: -10px;
             text-align: center;
+            white-space: nowrap;
+            overflow: hidden; 
+            text-overflow: ellipsis; 
         }
 
-        @media only screen and (max-width: 768px) {
-            body {
-                padding: 15px;
-                text-align: center;
-            }
+        .image-container:nth-child(3) {
+            display: block;
+            margin: 20px auto;
+            max-width: 70%; 
+        }
 
-            h1 {
-                font-size: 30px;
-                text-align: center;
-            }
-
-/*             #cover-section {
-                max-width: 100%;
-            } */
-
-            #cover-image {
-                max-width: none;
-                margin: 20px;  
-            }
-
-            #donations-section {
-                text-align: center;
-            }
-
-            #donations-section img {
-                max-width: 40%;
-                height: auto;
-                margin: 10px;
-                display: inline-block;
-            }
-
-            #paragraph {
-                max-width: 100%;
-                text-align: left;
-                margin: 0 auto;
-            }
-
-            #paragraph img {
-                max-width: 100%;
-                height: auto;
-                margin: 15px 0;
-            }
-
-            #paragraph p {
-                font-size: 20px;
-                margin-bottom: 15px;
-            }
-
-            .image-container {
-                max-width: 45%; 
-                margin: 20px 10px;
-                display: inline-block;
-                vertical-align: top;
-                text-align: center;
-            }
-
-            .image-container img {
-                width: 100%;
-                height: auto;
-            }
-
-            .image-caption {
-                margin-top: -10px;
-                margin-bottom: -10px;
-                text-align: center;
-                white-space: nowrap;
-                overflow: hidden; 
-                text-overflow: ellipsis; 
-            }
-
-            .image-container:nth-child(3) {
-                display: block;
-                margin: 20px auto;
-                max-width: 70%; 
-            }
-            
-            @media only screen and (max-width: 480px) {
+        @media only screen and (max-width: 480px) {
             #donations-section img {
                 width: 80%;
                 display: block;
@@ -199,8 +172,8 @@
             }
         }
     }
+</style>
 
-    </style>
 </head>
 <body>
 
