--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
             margin-bottom: -10px;
             text-align: center;
         }
+        
+        @media only screen and (min-width: 769px) {
+            #cover-image {
+                width: 100%; 
+                max-height: 300px; 
+                object-fit: cover;
+                margin: 0 auto 20px;
+            }
+        }
 
         @media only screen and (max-width: 768px) {
             body {
