--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                 width: 70%; 
                 max-height: 500px; 
                 object-fit: cover;
-                margin: 0 auto 20px;
+                margin: 0 auto;
+                margin-bottom: 20px;
             }
         }
 
