--- a/index.html
+++ b/index.html
@@ -103,16 +103,21 @@
             margin-bottom: -10px;
             text-align: center;
         }
-        
+
         @media only screen and (min-width: 769px) {
+            #cover-section {
+                display: flex;
+                justify-content: center;
+            }
+
             #cover-image {
                 width: 70%; 
                 max-height: 500px; 
                 object-fit: cover;
-                margin: 0 auto;
-                margin-bottom: 20px;
+                margin-bottom: 20px; 
             }
         }
+
 
         @media only screen and (max-width: 768px) {
             body {
