--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             #cover-image {
                 width: 70%; 
                 max-height: 500px; 
-                object-fit: cover;
+                object-fit: contain;
                 margin-bottom: 20px; 
             }
         }
