--- a/index.html
+++ b/index.html
@@ -111,11 +111,20 @@
             }
 
             #cover-image {
+                max-width: 90%; 
+                max-height: 500px; 
+                width: auto; 
+                height: auto;
+                object-fit: contain;
+                margin-bottom: 20px; 
+            }
+
+/*             #cover-image {
                 width: 90%; 
                 max-height: 500px; 
                 object-fit: contain;
                 margin-bottom: 20px; 
-            }
+            } */
         }
 
 
