--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="https://gazadonations.github.io/assets/CoverSocial-min.jpg"/>
     <meta name="twitter:title" content="Emergency Relief for Gaza"/>
-    <meta name="twitter:description" content="Raising money to provide relief to people in Gaza."/>
+    <meta name="twitter:description" content="Raising money to provide aid to the people of Gaza."/>
 
 
 
