--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                 margin-bottom: 20px; 
             }
 
+            #donations-section p,
+            #donations-section img {
+                font-size: 30px; 
+                width: auto; 
+                height: auto;
+                margin: 10px; 
+            }
+
 /*             #cover-image {
                 width: 70%; 
                 max-height: 500px; 
@@ -208,7 +216,7 @@
                 margin: 20px;
                 display: inline-block;
                 vertical-align: top;
-                text-align: center; /* Center the content within each image-container */
+                text-align: center; 
             }
 
             .image-container img {
