--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta name="twitter:title" content="Emergency Relief for Gaza"/>
     <meta name="twitter:description" content="Raising money to provide aid to the people of Gaza."/>
 
-
-
     <style>
         body {
             font-family: Georgia, "Times New Roman", Times, serif;
@@ -118,23 +116,7 @@
                 object-fit: contain;
                 margin-bottom: 20px; 
             }
-
-            #donations-section p,
-            #donations-section img {
-                font-size: 30px; 
-                width: auto; 
-                height: auto;
-                margin: 10px; 
-            }
-
-/*             #cover-image {
-                width: 70%; 
-                max-height: 500px; 
-                object-fit: contain;
-                margin-bottom: 20px; 
-            } */
         }
-
 
         @media only screen and (max-width: 768px) {
             body {
@@ -154,41 +136,23 @@
             #cover-image {
                 width: 100%;
                 max-height: 300px;
-                object-fit: cover; 
-                margin: 0 auto 20px; 
+                object-fit: cover;
+                margin: 0 auto 20px;
             }
 
             #donations-section {
                 text-align: center;
             }
 
-            #donations-section img {
-                width: 80px; /* Adjust the width of the icons */
-                height: 70px; /* Adjust the height of the icons */
-                margin: 10px;
-            }
-
             #donations-section p {
-                font-size: 20px; 
+                font-size: 20px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                flex-wrap: wrap; 
+                flex-wrap: wrap;
             }
 
-            #donations-section .donation-icons {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                margin-top: 20px;
-            }
-
-            .donation-icons-row {
-                display: flex;
-                justify-content: center;
-            }
-
-            .donation-icons-row img {
+            #donations-section img {
                 width: 80px;
                 height: 70px;
                 margin: 10px;
@@ -216,7 +180,7 @@
                 margin: 20px;
                 display: inline-block;
                 vertical-align: top;
-                text-align: center; 
+                text-align: center;
             }
 
             .image-container img {
@@ -228,13 +192,11 @@
                 margin-top: -10px;
                 margin-bottom: -10px;
                 text-align: center;
-                white-space: nowrap; 
-                overflow: hidden; 
+                white-space: nowrap;
+                overflow: hidden;
                 text-overflow: ellipsis;
             }
         }
-</style>
-
     </style>
 </head>
 <body>
@@ -247,33 +209,24 @@
     </div>
 
     <!-- Donations -->
-        <div id="donations-section">
+    <div id="donations-section">
         <p style="font-size: 30px; font-weight: bold; text-align: center; margin-bottom: -30px; margin-top: -10px;">
             <span style="color: black;">Donations:</span>
         </p>
 
         <!-- Icons -->
-        <div class="donation-icons">
-            <!-- First row: Paypal and Venmo -->
-            <div class="donation-icons-row">
-                <a href="http://paypal.me/DonationsGaza" target="_blank">
-                    <img src="assets/paypal.jpg" alt="Paypal">
-                </a>
-                <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
-                    <img src="assets/venmo.png" alt="Venmo">
-                </a>
-            </div>
-
-            <!-- Second row: Cashapp and Zelle -->
-            <div class="donation-icons-row">
-                <a href="https://cash.app/$donationsgaza" target="_blank">
-                    <img src="assets/cashapp.png" alt="Cashapp">
-                </a>
-                <a href="#"><!-- Add the link for Zelle here -->
-                    <img src="assets/zelle.jpg" alt="Zelle">
-                </a>
-            </div>
-        </div>
+        <p style="font-size: 30px; display: flex; align-items: center; justify-content: center;">
+            <a href="http://paypal.me/DonationsGaza" target="_blank">
+                <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
+            </a>
+            <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
+                <img src="assets/venmo.png" alt="Venmo" style="width: 80px; height: 80px; margin: 10px;">
+            </a>
+            <a href="https://cash.app/$donationsgaza" target="_blank">
+                <img src="assets/cashapp.png" alt="Cashapp" style="width: 80px; height: 80px; margin: 10px;">
+            </a>
+            <img src="assets/zelle.jpg" alt="Zelle" style="width: 200px; height: 190px; margin: 10px;">
+        </p>
     </div>
 
 
