--- a/index.html
+++ b/index.html
@@ -287,32 +287,23 @@
 
         <!-- Donations -->
         <div id="donations-section">
-            <p style="font-size: 30px; font-weight: bold; text-align: center; margin-bottom: -30px; margin-top: -10px;">
+             <p style="font-size: 30px; font-weight: bold; text-align: center; margin-bottom: -30px; margin-top: -10px;">
                 <span style="color: black;">Donations:</span>
             </p>
 
             <!-- Icons -->
-            <div class="donation-icons">
-                <!-- First row: Paypal and Venmo -->
-                <div class="donation-icons-row">
-                    <a href="http://paypal.me/DonationsGaza" target="_blank">
-                        <img src="assets/paypal.jpg" alt="Paypal">
-                    </a>
-                    <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
-                        <img src="assets/venmo.png" alt="Venmo">
-                    </a>
-                </div>
-
-                <!-- Second row: Cashapp and Zelle -->
-                <div class="donation-icons-row">
-                    <a href="https://cash.app/$donationsgaza" target="_blank">
-                        <img src="assets/cashapp.png" alt="Cashapp">
-                    </a>
-                    <a href="#"><!-- Add the link for Zelle here -->
-                        <img src="assets/zelle.jpg" alt="Zelle">
-                    </a>
-                </div>
-            </div>
+            <p style="font-size: 30px; display: flex; align-items: center; justify-content: center;">
+                <a href="http://paypal.me/DonationsGaza" target="_blank">
+                    <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
+                </a>
+                <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
+                    <img src="assets/venmo.png" alt="Venmo" style="width: 80px; height: 80px; margin: 10px;">
+                </a>
+                <a href="https://cash.app/$donationsgaza" target="_blank">
+                    <img src="assets/cashapp.png" alt="Cashapp" style="width: 80px; height: 80px; margin: 10px;">
+                </a>
+                <img src="assets/zelle.jpg" alt="Zelle" style="width: 200px; height: 190px; margin: 10px;">
+            </p>
         </div>
     </div>
 </body>
