--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
         <p><strong><span class="personal-statement">Personal Statement 🖤</span></strong></p>
         <p>As a refugee from Khan Yunis-Gaza, it's heart-wrenching to witness the destruction of my birthplace. While my family still resides in Khan Yunis-Gaza, I've lost friends, family, neighbors, my childhood home, schools, and beloved spots, all affected by the actions of the Israeli government.</p>
 
-        <p>Recognizing the immense impact of my personal contributions as shown with the images above, I've been sending my own money to multiple families. Witnessing the positive change brought about by these individual efforts, I've decided to extend my reach to a community that shares a profound care for humanity. Together, we can amplify our impact and provide assistance to as many families as possible in their time of need. Thank you for your humanity ❤️‍🩹</p>
+        <p>Recognizing the immense impact of my personal contributions as shown in the images above, I've been sending my own money to multiple families. Witnessing the positive change brought about by these individual efforts, I've decided to extend my reach to a community that shares a profound care for humanity. Together, we can amplify our impact and provide assistance to as many families as possible in their time of need. Thank you for your humanity ❤️‍🩹</p>
 
 
         <!-- Donations -->
         <div id="donations-section">
-             <p style="font-size: 30px; font-weight: bold; text-align: center; margin-bottom: -30px; margin-top: -10px;">
+             <p style="font-size: 30px; font-weight: bold; text-align: left; margin-bottom: -30px; margin-top: -10px;">
                 <span style="color: black;">Donations:</span>
             </p>
 
