--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             text-align: center;
         }
 
+        .donations-title {
+            text-align: left;
+        }
+
         @media only screen and (min-width: 769px) {
             #cover-section {
                 display: flex;
@@ -285,26 +289,24 @@
         <p>Recognizing the immense impact of my personal contributions as shown in the images above, I've been sending my own money to multiple families. Witnessing the positive change brought about by these individual efforts, I've decided to extend my reach to a community that shares a profound care for humanity. Together, we can amplify our impact and provide assistance to as many families as possible in their time of need. Thank you for your humanity ❤️‍🩹</p>
 
 
-        <!-- Donations -->
-        <div id="donations-section">
-             <p style="font-size: 30px; font-weight: bold; text-align: left; margin-bottom: -30px; margin-top: -10px;">
-                <span style="color: black;">Donations:</span>
-            </p>
+        <!-- Donations under Personal Statement -->
+        <p class="donations-title" style="font-size: 30px; font-weight: bold; text-align: left; margin-bottom: -30px; margin-top: -10px;">
+            <span style="color: black;">Donations:</span>
+        </p>
 
-            <!-- Icons -->
-            <p style="font-size: 30px; display: flex; align-items: center; justify-content: center;">
-                <a href="http://paypal.me/DonationsGaza" target="_blank">
-                    <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
-                </a>
-                <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
-                    <img src="assets/venmo.png" alt="Venmo" style="width: 80px; height: 80px; margin: 10px;">
-                </a>
-                <a href="https://cash.app/$donationsgaza" target="_blank">
-                    <img src="assets/cashapp.png" alt="Cashapp" style="width: 80px; height: 80px; margin: 10px;">
-                </a>
-                <img src="assets/zelle.jpg" alt="Zelle" style="width: 200px; height: 190px; margin: 10px;">
-            </p>
-        </div>
+        <!-- Donations Icons under Personal Statement -->
+        <p style="font-size: 30px; display: flex; align-items: left; justify-content: left;">
+            <a href="http://paypal.me/DonationsGaza" target="_blank">
+                <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
+            </a>
+            <a href="https://account.venmo.com/u/EmanHassan" target="_blank">
+                <img src="assets/venmo.png" alt="Venmo" style="width: 80px; height: 80px; margin: 10px;">
+            </a>
+            <a href="https://cash.app/$donationsgaza" target="_blank">
+                <img src="assets/cashapp.png" alt="Cashapp" style="width: 80px; height: 80px; margin: 10px;">
+            </a>
+            <img src="assets/zelle.jpg" alt="Zelle" style="width: 200px; height: 190px; margin: 10px;">
+        </p>
     </div>
 </body>
 </html>
