--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
             text-align: left;
         }
 
+        .donations-icons {
+            text-align: left;
+        }
+
+
         @media only screen and (min-width: 769px) {
             #cover-section {
                 display: flex;
@@ -160,6 +165,10 @@
                 width: 80px;
                 height: 70px;
                 margin: 10px;
+            }
+
+            .donations-icons {
+                text-align: center;
             }
 
             #paragraph {
@@ -295,7 +304,7 @@
         </p>
 
         <!-- Donations Icons under Personal Statement -->
-        <p style="font-size: 30px; display: flex; align-items: left; justify-content: left;">
+        <p class="donations-icons" style="font-size: 30px; display: flex; align-items: center; justify-content: center;">
             <a href="http://paypal.me/DonationsGaza" target="_blank">
                 <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
             </a>
