--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             }
 
             .donations-icons {
-                text-align: center;
+                justify-content: center;
             }
 
             #paragraph {
