--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         }
 
         .donations-icons {
-            text-align: left;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
         }
 
 
@@ -169,6 +171,7 @@
 
             .donations-icons {
                 justify-content: center;
+                text-align: center;
             }
 
             #paragraph {
