--- a/index.html
+++ b/index.html
@@ -106,13 +106,6 @@
             text-align: left;
         }
 
-        .donations-icons {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-        }
-
-
         @media only screen and (min-width: 769px) {
             #cover-section {
                 display: flex;
@@ -167,11 +160,6 @@
                 width: 80px;
                 height: 70px;
                 margin: 10px;
-            }
-
-            .donations-icons {
-                justify-content: center;
-                text-align: center;
             }
 
             #paragraph {
@@ -307,7 +295,7 @@
         </p>
 
         <!-- Donations Icons under Personal Statement -->
-        <p class="donations-icons" style="font-size: 30px; display: flex; align-items: center; justify-content: center;">
+        <p style="font-size: 30px; display: flex; align-items: center; justify-content: left;">
             <a href="http://paypal.me/DonationsGaza" target="_blank">
                 <img src="assets/paypal.jpg" alt="Paypal" style="width: 90px; height: 80px; margin: 10px;">
             </a>
