--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="video-item">
                 <div class="video-caption">We deeply appreciate your generous contributions. In this heartfelt video, we showcase the impactful contributions made by our supporters, expressing gratitude to our dedicated organizer, Hatem, from America. Together, let's continue sustaining the resilience of our people. ♥️</div>
                 <video controls>
-                    <source src="assets/GazaDonations.mp4" type="video/mp4">
+                    <source src="assets/GazaDonation.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
