--- a/index.html
+++ b/index.html
@@ -277,17 +277,33 @@
             <!-- Gaza Help Video w/ Caption -->
             <div class="video-item">
                 <div class="video-caption">A sincere video from a civilian in Gaza, seeking our ongoing assistance.</div>
-                <video controls>
+                <video controls id="gazaHelp">
                     <source src="assets/GazaHelp.MP4" type="video/mp4">
                 </video>
+
+                <script>
+                    var videoHelp = document.getElementById("gazaHelp");
+
+                    videoHelp.currentTime = 1;
+
+                    //videoHelp.play();
+                </script>
             </div>
 
             <!-- Gaza Donations w/ Caption -->
             <div class="video-item">
                 <div class="video-caption">We deeply appreciate your generous contributions. In this heartfelt video, we showcase the impactful contributions made by our supporters, expressing gratitude to our dedicated organizer, Hatem, from America. Together, let's continue sustaining the resilience of our people. ♥️</div>
-                <video controls>
+                <video controls id="gazaDonation">
                     <source src="assets/GazaDonation.mp4" type="video/mp4">
                 </video>
+
+                <script>
+                    var videoDonation = document.getElementById("gazaDonation");
+
+                    videoDonation.currentTime = 1;
+
+                    //videoDonation.play();
+                </script>
             </div>
         </div>
 
