--- a/index.html
+++ b/index.html
@@ -277,17 +277,9 @@
             <!-- Gaza Help Video w/ Caption -->
             <div class="video-item">
                 <div class="video-caption">A sincere video from a civilian in Gaza, seeking our ongoing assistance.</div>
-                <video controls id="gazaHelp">
+                <video controls poster="assets/helpThumbnail.png">
                     <source src="assets/GazaHelp.MP4" type="video/mp4">
                 </video>
-
-                <script>
-                    var videoHelp = document.getElementById("gazaHelp");
-
-                    videoHelp.currentTime = 1;
-
-                    //videoHelp.play();
-                </script>
             </div>
 
             <!-- Gaza Donations w/ Caption -->
