--- a/index.html
+++ b/index.html
@@ -285,17 +285,9 @@
             <!-- Gaza Donations w/ Caption -->
             <div class="video-item">
                 <div class="video-caption">We deeply appreciate your generous contributions. In this heartfelt video, we showcase the impactful contributions made by our supporters, expressing gratitude to our dedicated organizer, Hatem, from America. Together, let's continue sustaining the resilience of our people. ♥️</div>
-                <video controls id="gazaDonation">
+                <video controls poster="assets/donationThumbnail.png">
                     <source src="assets/GazaDonation.mp4" type="video/mp4">
                 </video>
-
-                <script>
-                    var videoDonation = document.getElementById("gazaDonation");
-
-                    videoDonation.currentTime = 1;
-
-                    //videoDonation.play();
-                </script>
             </div>
         </div>
 
