--- a/index.html
+++ b/index.html
@@ -275,12 +275,29 @@
          <!-- Videos -->
         <div class="video-container">
             <!-- Gaza Help Video w/ Caption -->
-            <div class="video-item">
+            <!-- <div class="video-item">
                 <div class="video-caption">A sincere video from a civilian in Gaza, seeking our ongoing assistance.</div>
                 <video controls poster="assets/helpThumbnail.png">
                     <source src="assets/GazaHelp.MP4" type="video/mp4">
                 </video>
+            </div> -->
+
+            <!-- Gaza Donations Ramadan w/ Caption -->
+            <div class="video-item">
+                <div class="video-caption">During this Ramadan, we continue to provide food to those displaced in Rafah from your donations.</div>
+                <video controls poster="assets/donationR1Thumbnail.png">
+                    <source src="assets/DonationRamadan1.mp4" type="video/mp4">
+                </video>
             </div>
+
+            <!-- Gaza Donations Ramadan w/ Caption -->
+            <div class="video-item">
+                <div class="video-caption">Part II: Food distribution in Rafah during Ramadan.</div>
+                <video controls poster="assets/donationR2Thumbnail.png">
+                    <source src="assets/DonationRamadan2.mp4" type="video/mp4">
+                </video>
+            </div>
+
 
             <!-- Gaza Donations w/ Caption -->
             <div class="video-item">
